Added homepage banner

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,11 @@
 @charset 'utf-8';
+@import 'helper/variables';
+
 @import 'basic/icons';
+@import 'basic/buttons';
 
 
 @import 'layout/header';
+@import 'layout/container';
+
+@import 'modules/home-banner';
