--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -5,11 +5,14 @@
 }
 
 .top-nav{
-  background-color: #00247d;
+  background-color: $blue;
   padding: 10px 0;
   color: #fff;
+  @media only screen and (max-width: $lap-start) {
+    display: none;
+  }
   &__grid{
-  font-family: 'Hind', sans-serif;
+  font-family: $main-font;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -25,7 +28,7 @@
       margin-right: 20px;    
       } 
       i{
-        color: #d42626 ;
+        color: $red ;
       }
         
         }
@@ -65,7 +68,7 @@ header {
 }
 
 .nav__links a,{
-  font-family: 'Hind', sans-serif;
+  font-family: $main-font;
   font-weight: 500;
   color: #222;
   text-decoration: none;
@@ -85,25 +88,25 @@ header {
 }
 
 .nav__links li a:hover {
-  color: #d42626;
+  color: $red;
 }
 
 .cta {
-  padding: 9px 25px;
-  background-color: #d42626;
-  border: none;
-//   border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-  color: #fff;
-  font-weight: 500;
-  text-decoration: none;
-  font-family: 'Hind', sans-serif;
+//   padding: 9px 25px;
+//   background-color: $red;
+//   border: none;
+// //   border-radius: 50px;
+//   cursor: pointer;
+//   transition: all 0.3s ease 0s;
+//   color: #fff;
+//   font-weight: 500;
+//   text-decoration: none;
+//   font-family: $main-font;
 
 }
 
 .cta:hover {
-  background-color: rgba(0, 136, 169, 0.8);
+//   background-color: rgba(0, 136, 169, 0.8);
 }
 
 /* Mobile Nav */
