Added testimonials section to the homepage.

--- a/assets/css/helper/_variables.scss
+++ b/assets/css/helper/_variables.scss
@@ -1,6 +1,7 @@
 $red: #d42626;
 $blue: #00247d;
 $blue-dark: darken($blue, 10%);
+$grey: #ECECEC;
 $main-font: 'Hind', sans-serif;
 $text-color: #222;
 
