--- a/assets/css/basic/_root.scss
+++ b/assets/css/basic/_root.scss
@@ -6,23 +6,14 @@ body{
   }
   
   section{
+    padding: 60px 0;
     h2{
       &:first-child{
        font-size: 32px;
         text-transform: capitalize;
         text-align: center;
-        margin-bottom: 60px;
+        margin-bottom: 50px;
         position: relative;
-        &::after{
-          content: "";
-          position: absolute;
-          top: 50px;
-          left: 50%;
-          margin-left: -25px;
-          width: 50px;
-          height: 4px;
-          background: $blue;
-        } 
       }
     }
   }
