--- a/assets/css/modules/_cards.scss
+++ b/assets/css/modules/_cards.scss
@@ -2,19 +2,36 @@
   text-align: center;
   -webkit-transition: all 200ms ease;
   transition: all 200ms ease;
-  padding:20px;
-  background-color: #ECECEC;
-  border-radius: 6px;
+  padding:20px 20px 50px;
+  background-color: #FFF;
+  border-radius: 10px;
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
   box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-  &__img{
-    width: 70px;
-    margin: 0 auto;
-    display: block;
+  &__img_container{
+    width: 100px;
+    height: 100px;
+    margin: 0 auto 10px;
+    display: flex;
+  align-items: center;
+  justify-content: center;
+    background-color: #fff;
+    border-radius: 50%;
+    &__svg{
+      width: 70px;
+    }
   }
   &__title{
+    margin-bottom: 10px;
   }
   &__text{
+    margin-bottom: 25px;
+  }
+  
+  &:hover{
+    -webkit-transform: translateY(-1px);
+    transform: translateY(-1px);
+    -webkit-box-shadow: 0 6px 25px rgba(0,0,0,0.4);
+    box-shadow: 0 6px 25px rgba(0,0,0,0.4);
   }
 }
 
