--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,12 @@
 @charset 'utf-8';
 @import 'helper/variables';
+@import 'helper/shorthands';
 
 @import 'basic/icons';
 @import 'basic/buttons';
 @import 'basic/root';
+
+@import 'tools/swiper';
 
 @import 'layout/header';
 @import 'layout/container';
@@ -11,5 +14,6 @@
 @import 'modules/home-banner';
 @import 'modules/centered-text';
 @import 'modules/cards';
+@import 'modules/testimonial-slider';
 
 @import 'page/homepage';
