Added footer needs more styling though.

--- a/assets/css/helper/_shorthands.scss
+++ b/assets/css/helper/_shorthands.scss
@@ -18,6 +18,12 @@
     background: $blue;
   } 
   
+  &--left{
+    &::after{
+     margin: 0; 
+    }
+  }
+  
   &--white{
     &::after{
       background: #fff;
