--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@
 
 @import 'layout/header';
 @import 'layout/container';
+@import 'layout/footer';
 
 @import 'modules/home-banner';
 @import 'modules/centered-text';
