Added footer CSS styling. Modal Next.

--- a/assets/css/helper/_variables.scss
+++ b/assets/css/helper/_variables.scss
@@ -2,6 +2,7 @@ $red: #d42626;
 $blue: #00247d;
 $blue-dark: darken($blue, 10%);
 $grey: #ECECEC;
+$grey-dark: darken($grey, 10%);
 $main-font: 'Hind', sans-serif;
 $text-color: #222;
 
