--- a/assets/css/basic/_root.scss
+++ b/assets/css/basic/_root.scss
@@ -1,10 +1,14 @@
 body{
   font-family: $main-font; 
+  background-color: $blue;
   
   p{
     color: $text-color;
   }
   
+//   a{
+//     text-decoration: none;
+//   }
   section{
     padding: 60px 0;
     h2{
