--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -1,6 +1,8 @@
 .footer{
   background-color: $grey;
   padding: 60px 0;
+      background-position: center !important;
+    background-size: cover !important;
   &__grid{
     display: flex;
     flex-wrap: wrap;
@@ -13,6 +15,9 @@
       @media only screen and (max-width: $desk-start) {
         width: 100%;
         margin-bottom: 20px;
+        &:last-child{
+          margin-bottom: 0;
+        }
       }
       img{
         width: 90px;
@@ -55,6 +60,7 @@
               top: 0px;
               line-height: 24px;
               font-size: 17px;
+              color: $red;
           }
         }
       }
@@ -76,7 +82,8 @@
 }
 
 .footer-credits{
-  padding: 10px 0;
+  padding: 15px 0;
+  background-color: $blue;
   &__grid{
     display: flex;
     flex-wrap: wrap;
@@ -89,8 +96,17 @@
       width: calc(50% - 20px);
       @media only screen and (max-width: $desk-start) {
         width: 100%;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         text-align: center !important;
+        &:last-child{
+          margin-bottom: 0;
+        }
+      }
+      p{
+        color: #fff;
+        a{
+          color: inherit;
+        }
       }
       &:nth-child(2){
         text-align:right;
