Added header. It worksgit add .

--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -38,10 +38,22 @@
       &__list{
         margin-top: 30px;
         margin-left: 18px;
+        list-style: none;
         li{
           a{
             text-decoration: none;
             color: $blue;
+            line-height: 0;
+          }
+          &::before {
+            content: "\2022";
+            color: $red;
+            font-weight: bold;
+            display: inline-block; 
+            width: 1em;
+            font-size: 20px;
+            margin-left: -1em;
+                vertical-align: middle;
           }
         }
       }
