--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,5 +16,6 @@
 @import 'modules/centered-text';
 @import 'modules/cards';
 @import 'modules/testimonial-slider';
+@import 'modules/google-maps';
 
 @import 'page/homepage';
