--- a/assets/css/modules/_home-banner.scss
+++ b/assets/css/modules/_home-banner.scss
@@ -6,9 +6,10 @@
   display: flex;
   align-items: center;
   color: $text-color;
+  text-align: center;
   font-family: $main-font;
-  @media only screen and (max-width: $desk-start) {
-    text-align: center;
+  @media only screen and (max-width: $lap-start) {
+    margin-top: 83px;
   }
   @media only screen and (max-width: $small-mobile-start){
     height: 430px;
