--- a/assets/css/basic/_root.scss
+++ b/assets/css/basic/_root.scss
@@ -11,6 +11,7 @@ body{
 //   }
   section{
     padding: 60px 0;
+    background: #fff;
     h2{
       &:first-child{
        font-size: 32px;
@@ -20,5 +21,16 @@ body{
         position: relative;
       }
     }
+    p{
+      margin-bottom: 20px;
+    }
   }
+  
+  ul{
+    margin-left: 40px;
+    li{
+      color: $text-color;
+    }
+  }
+
 }
