--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -21,9 +21,10 @@
     max-width: 1180px;
     position: relative;
     &__item{
-      
+      margin: 0;
       li{
       display:inline;
+      color: #fff;
       &:not(:last-child){
       margin-right: 20px;    
       } 
@@ -50,6 +51,7 @@
 header {
   padding: 20px 0;
   background-color: white;
+  box-shadow: 0px 3px 6px 0px rgba(20, 20, 20, 0.05);
   &.fixed {
       position: fixed;
       top:0;
@@ -118,6 +120,7 @@ header {
 .nav__links {
   list-style: none;
   display: flex;
+  margin: 0;
   li{
     padding: 0px 20px;
     position: relative;
