--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,5 +17,7 @@
 @import 'modules/cards';
 @import 'modules/testimonial-slider';
 @import 'modules/google-maps';
+@import 'modules/page-banner';
+@import 'modules/breadcrumb';
 
 @import 'page/homepage';
