Added contact form.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,7 @@
 @import 'basic/icons';
 @import 'basic/buttons';
 @import 'basic/root';
+@import 'basic/forms';
 
 @import 'tools/swiper';
 
@@ -19,5 +20,6 @@
 @import 'modules/google-maps';
 @import 'modules/page-banner';
 @import 'modules/breadcrumb';
+@import 'modules/contact-details';
 
 @import 'page/homepage';
