--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -1,8 +1,10 @@
 .footer{
   background-color: $grey;
   padding: 60px 0;
-      background-position: center !important;
-    background-size: cover !important;
+  background-position: center !important;
+  background-size: cover !important;
+  box-shadow: 0px 2px 16px -8px #000000;
+  
   &__grid{
     display: flex;
     flex-wrap: wrap;
