--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -49,7 +49,6 @@
 
 
 header {
-  padding: 20px 0;
   background-color: white;
   box-shadow: 0px 3px 6px 0px rgba(20, 20, 20, 0.05);
   &.fixed {
@@ -105,6 +104,7 @@ header {
 .logo {
   cursor: pointer;
   width: 80px;
+  padding: 20px 0;
   @media only screen and (max-width: 1100px) {
     width: 60px;
     position: absolute;
@@ -114,6 +114,7 @@ header {
     transform: translate(-50%, 23%);
     text-align: center;
     float: none;
+    padding: 0;
   }
 }
 
@@ -122,7 +123,6 @@ header {
   display: flex;
   margin: 0;
   li{
-    padding: 0px 20px;
     position: relative;
     &.has-sub{
       &:hover{
@@ -214,10 +214,14 @@ header {
       font-weight: 500;
       color: #222;
       text-decoration: none;
+      padding: 46px 20px;
       transition: all 0.3s ease 0s; 
+
       &:hover{
-         color: $red;
+        color: $red;
+
       }
+     
     }
   }
   
