--- a/assets/css/modules/_breadcrumb.scss
+++ b/assets/css/modules/_breadcrumb.scss
@@ -5,6 +5,7 @@
   a{
     color: $text-color;
     text-decoration: none;
+    font-weight: 500;
     &:hover{
       text-decoration: underline;
     }
