--- a/assets/css/modules/_page-banner.scss
+++ b/assets/css/modules/_page-banner.scss
@@ -1,6 +1,7 @@
 .page-banner{
   background-position: center !important;
   background-size: cover !important;
+  background-attachment: fixed !important;
   min-height: 330px;
   display: flex;
   align-items: center;
@@ -10,5 +11,8 @@
   }
   &__title{
     color: $text-color;
+    text-align: center;
+    padding: 0 20px;
+        line-height: 40px;
   }
 }
