Added modal feature. Needs more work.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,5 +21,6 @@
 @import 'modules/page-banner';
 @import 'modules/breadcrumb';
 @import 'modules/contact-details';
+@import 'modules/modal';
 
 @import 'page/homepage';
