Finished modal and smooth scroll to top button. Front end done! WordPress implementation next.

--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -48,7 +48,7 @@
         li{
           a{
             text-decoration: none;
-            color: $blue;
+            color: $text-color;
             line-height: 0;
           }
           &::before {
