--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,5 +22,6 @@
 @import 'modules/breadcrumb';
 @import 'modules/contact-details';
 @import 'modules/modal';
+@import 'modules/scroll-top';
 
 @import 'page/homepage';
