--- a/assets/css/modules/_modal.scss
+++ b/assets/css/modules/_modal.scss
@@ -1,25 +1,16 @@
 .modal-wrap {
-  background: rgba(0, 0, 0, 0.8);
-  height: 100%;
-  left: 0;
   opacity: 0;
   overflow: auto;
-  position: fixed;
-  top: 0;
   visibility: hidden;
-  width: 100%;
+//   width: 100%;
   z-index: 99999999;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
 }
 
 .modal-wrap.visible {
@@ -33,6 +24,13 @@
   max-width: 100%;
   width: 600px;
   z-index: 100;
+// //   visibility: hidden;
+//   -webkit-transition: all 0.3s ease-in-out;
+//   transition: all 0.3s ease-in-out;
+//   &.visible{
+//     opacity: 1;
+//     visibility: visible;
+//   }
 }
 
 .modal-wrap .modal-container .modal-header,  .modal-wrap .modal-container .modal-footer {
@@ -73,6 +71,7 @@
   margin: 0;
   padding: 15px 30px;
   width: 100%;
+  background: #FFF;
   p{
     margin-bottom: 20px;
   }
@@ -94,3 +93,26 @@
 }
 
 .modal-wrap .modal-footer a { color: #fff; }
+
+.close-canvas {
+    background-color: transparent;
+    bottom: 0;
+    cursor: pointer;
+    height: 100vh;
+    z-index: 999999;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100%;
+    opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+    &--active {
+      display: block;
+      background: rgba(0, 0, 0, 0.95);
+      opacity: 1;
+      visibility: visible;
+    }
+  }
