--- a/assets/css/basic/_icons.scss
+++ b/assets/css/basic/_icons.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?75644100');
-  src: url('../font/fontello.eot?75644100#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?75644100') format('woff2'),
-       url('../font/fontello.woff?75644100') format('woff'),
-       url('../font/fontello.ttf?75644100') format('truetype'),
-       url('../font/fontello.svg?75644100#fontello') format('svg');
+  src: url('../font/fontello.eot?28910558');
+  src: url('../font/fontello.eot?28910558#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?28910558') format('woff2'),
+       url('../font/fontello.woff?28910558') format('woff'),
+       url('../font/fontello.ttf?28910558') format('truetype'),
+       url('../font/fontello.svg?28910558#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?75644100#fontello') format('svg');
+    src: url('../font/fontello.svg?28910558#fontello') format('svg');
   }
 }
 */
@@ -57,7 +57,12 @@
  
 .icon-clock:before { content: '\e800'; } /* '' */
 .icon-phone:before { content: '\e801'; } /* '' */
+.icon-home:before { content: '\e802'; } /* '' */
+.icon-arrow-up:before { content: '\e803'; } /* '' */
+.icon-paper-plane:before { content: '\e804'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
-.icon-github-circled:before { content: '\f09b'; } /* '' */
+.icon-mail-alt:before { content: '\f0e0'; } /* '' */
+.icon-linkedin:before { content: '\f0e1'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
-.icon-paper-plane:before { content: '\f1d8'; } /* '' */
+.icon-facebook-official:before { content: '\f230'; } /* '' */
+.icon-map-pin:before { content: '\f276'; } /* '' */
