--- a/assets/css/modules/_scroll-top.scss
+++ b/assets/css/modules/_scroll-top.scss
@@ -9,7 +9,8 @@
   background-color: $red;
   color: white;
   cursor: pointer;
-  padding: 5px 13px;
+  height: 45px;
+  width: 45px;
   border-radius: 50%;
   visibility: hidden;
     opacity: 0;
