--- a/assets/css/basic/_root.scss
+++ b/assets/css/basic/_root.scss
@@ -2,6 +2,13 @@ body{
   font-family: $main-font; 
   background-color: $blue;
   position: relative;
+      padding-top: 173px;
+  @media only screen and (max-width: 1100px) {
+        padding-top: 132px;
+  }
+  @media only screen and (max-width: $lap-start) {
+        padding-top: 0;
+  }
   p{
     color: $text-color;
   }
