--- a/assets/css/modules/_home-banner.scss
+++ b/assets/css/modules/_home-banner.scss
@@ -14,7 +14,15 @@
   @media only screen and (max-width: $small-mobile-start){
     height: 400px;
   }
-  h1{
+  
+   &__content{
+    @media only screen and (max-width: 1100px) {
+      margin-top: 40px;
+    }
+    @media only screen and (max-width: $lap-start) {
+       margin-top: 0;
+    }
+    h1{
     font-size: 55px;
     line-height: 55px;
     margin-bottom: 20px;
@@ -34,6 +42,7 @@
   p{
     font-size: 22px;
     margin-bottom: 32px;
+  }
   }
 }
 
