--- a/assets/css/modules/_page-banner.scss
+++ b/assets/css/modules/_page-banner.scss
@@ -14,7 +14,13 @@
     color: $text-color;
     text-align: center;
     padding: 0 20px;
-        line-height: 48px;
-        font-size: 48px;
+    line-height: 48px;
+    font-size: 48px;
+    @media only screen and (max-width: 1100px) {
+      margin-top: 60px;
+    }
+    @media only screen and (max-width: $lap-start) {
+       margin-top: 0;
+    }
   }
 }
