--- a/assets/css/modules/_breadcrumb.scss
+++ b/assets/css/modules/_breadcrumb.scss
@@ -1,7 +1,7 @@
 .breadcrumb{
     background: #fff;
     padding: 17px 0;
-    border-bottom: 1px solid #cecece;
+    border-bottom: 3px solid #f4f4f4;
   a{
     color: $text-color;
     text-decoration: none;
